	* Added the ability to drag and drop files onto the profile and model editors to load the profile or import the model
	* Model editor can now display an axes indicator in the from left corner to better see the orientation of the bed
	* Micro 3D profile and slicer profiles will be removed if not using a Micro 3D printer and added if using a Micro 3D printer

V1.8 September 22, 2016

	* Provides iMe V00.00.01.22 printer firmware
	* Fixed issue that prevented setting calibrate Z0 correction to negative values

V1.7 August 30, 2016

	* Fixed issues with browser incompatibilities with the CSS background-image property
	* Fixed divide by 0 error in bed leveling pre-processor
	* Provides iMe V00.00.01.18 printer firmware
	* Allows setting calibrate Z0 correction for iMe firmware

V1.6 August 17, 2016

	* Provides iMe V00.00.01.12 printer firmware
	* Allows setting homing sensitivity for iMe firmware
	* Fixed potential issue when printing files that contains G92 commands without any parameters

V1.5 August 3, 2016

	* Made canceling a print and emergency stop more reliable
	* Added more exeption handling when connecting to the printer
	* Fixed issue in setting the extruder's current

V1.4 July 29, 2016

	* Really fixed compatibility with OctoPrint V1.2.14

V1.3 July 28, 2016

	* Provides iMe V00.00.01.06 printer firmware
	* Allows setting steps/mm for each of the motors
	* Fixed compatibility with OctoPrint V1.2.14

V1.2 July 22, 2016

	* Fixed issue with M33 Fio not working on Windows

V1.1 July 20, 2016

	* Added CAM slicer profile
	* Displays dialog when slicing and pre-processing a file
	* Fixed issue where temporary files wouldn't be deleted after they were done being used
	* Provides iMe V00.00.00.12 printer firmware

V1.0 July 13, 2016

	* First non-beta release of M33 Fio. Huge thanks to everyone who has tested and contributed to it over the last year!
	* Profile editor allows setting printing and heatbed temperature when using a printer other than the Micro 3D