@@ -145,6 +145,9 @@ class M33FioPlugin(
 		self.currentFirmwareType = None
 		self.sharedLibraryIsUsable = False
 		self.cancelingPrint = False
+		self.slicerReminder = False
+		self.sleepReminder = False
+		self.webcamProcess = None
 		
 		# Rom decryption and encryption tables
 		self.romDecryptionTable = [0x26, 0xE2, 0x63, 0xAC, 0x27, 0xDE, 0x0D, 0x94, 0x79, 0xAB, 0x29, 0x87, 0x14, 0x95, 0x1F, 0xAE, 0x5F, 0xED, 0x47, 0xCE, 0x60, 0xBC, 0x11, 0xC3, 0x42, 0xE3, 0x03, 0x8E, 0x6D, 0x9D, 0x6E, 0xF2, 0x4D, 0x84, 0x25, 0xFF, 0x40, 0xC0, 0x44, 0xFD, 0x0F, 0x9B, 0x67, 0x90, 0x16, 0xB4, 0x07, 0x80, 0x39, 0xFB, 0x1D, 0xF9, 0x5A, 0xCA, 0x57, 0xA9, 0x5E, 0xEF, 0x6B, 0xB6, 0x2F, 0x83, 0x65, 0x8A, 0x13, 0xF5, 0x3C, 0xDC, 0x37, 0xD3, 0x0A, 0xF4, 0x77, 0xF3, 0x20, 0xE8, 0x73, 0xDB, 0x7B, 0xBB, 0x0B, 0xFA, 0x64, 0x8F, 0x08, 0xA3, 0x7D, 0xEB, 0x5C, 0x9C, 0x3E, 0x8C, 0x30, 0xB0, 0x7F, 0xBE, 0x2A, 0xD0, 0x68, 0xA2, 0x22, 0xF7, 0x1C, 0xC2, 0x17, 0xCD, 0x78, 0xC7, 0x21, 0x9E, 0x70, 0x99, 0x1A, 0xF8, 0x58, 0xEA, 0x36, 0xB1, 0x69, 0xC9, 0x04, 0xEE, 0x3B, 0xD6, 0x34, 0xFE, 0x55, 0xE7, 0x1B, 0xA6, 0x4A, 0x9A, 0x54, 0xE6, 0x51, 0xA0, 0x4E, 0xCF, 0x32, 0x88, 0x48, 0xA4, 0x33, 0xA5, 0x5B, 0xB9, 0x62, 0xD4, 0x6F, 0x98, 0x6C, 0xE1, 0x53, 0xCB, 0x46, 0xDD, 0x01, 0xE5, 0x7A, 0x86, 0x75, 0xDF, 0x31, 0xD2, 0x02, 0x97, 0x66, 0xE4, 0x38, 0xEC, 0x12, 0xB7, 0x00, 0x93, 0x15, 0x8B, 0x6A, 0xC5, 0x71, 0x92, 0x45, 0xA1, 0x59, 0xF0, 0x06, 0xA8, 0x5D, 0x82, 0x2C, 0xC4, 0x43, 0xCC, 0x2D, 0xD5, 0x35, 0xD7, 0x3D, 0xB2, 0x74, 0xB3, 0x09, 0xC6, 0x7C, 0xBF, 0x2E, 0xB8, 0x28, 0x9F, 0x41, 0xBA, 0x10, 0xAF, 0x0C, 0xFC, 0x23, 0xD9, 0x49, 0xF6, 0x7E, 0x8D, 0x18, 0x96, 0x56, 0xD1, 0x2B, 0xAD, 0x4B, 0xC1, 0x4F, 0xC8, 0x3A, 0xF1, 0x1E, 0xBD, 0x4C, 0xDA, 0x50, 0xA7, 0x52, 0xE9, 0x76, 0xD8, 0x19, 0x91, 0x72, 0x85, 0x3F, 0x81, 0x61, 0xAA, 0x05, 0x89, 0x0E, 0xB5, 0x24, 0xE0]
@@ -873,6 +876,10 @@ class M33FioPlugin(
 	# On after startup
 	def on_after_startup(self) :
 	
+		# Make sure webcam stream is set so that HTML is added to web page
+		if not octoprint.settings.settings().get(["webcam", "stream"]) :
+			octoprint.settings.settings().set(["webcam", "stream"], "None", True)
+	
 		# Guarantee settings are valid
 		self.guaranteeSettingsAreValid()
 		
@@ -896,6 +903,9 @@ class M33FioPlugin(
 		
 			# Turn off use GPIO setting
 			self._settings.set_boolean(["UseGpio"], False)
+		
+		# Save settings
+		octoprint.settings.settings().save()
 	
 		# Set reminders on initial OctoPrint instance
 		currentPort = self.getListenPort(psutil.Process(os.getpid()))
@@ -976,6 +986,12 @@ class M33FioPlugin(
 		monitorHeatbedThread.daemon = True
 		monitorHeatbedThread.start()
 		
+		# Start webcam process
+		self.startWebcamProcess()
+	
+	# Start webcam process
+	def startWebcamProcess(self) :
+		
 		# Check if pygame camera or QTKit is usable and hosting camera
 		if ("pygame.camera" in sys.modules or "QTKit" in sys.modules) and self._settings.get_boolean(["HostCamera"]) :
 		
@@ -983,8 +999,29 @@ class M33FioPlugin(
 			cameraPort = self._settings.get(["CameraPort"])
 			if cameraPort is not None :
 			
-				# Start webcam server
-				subprocess.Popen([sys.executable.replace('\\', '/'), self._basefolder.replace('\\', '/') + "/webcam_server.py", str(cameraPort), "4999", str(self._settings.get_int(["CameraFramesPerSecond"])), str(self._settings.get_int(["CameraWidth"])), str(self._settings.get_int(["CameraHeight"]))])
+				# Check if port is open
+				if self.isPortOpen(4999) :
+			
+					# Start webcam server
+					self.webcamProcess = subprocess.Popen([sys.executable.replace('\\', '/'), self._basefolder.replace('\\', '/') + "/webcam_server.py", str(cameraPort), "4999", str(self._settings.get_int(["CameraFramesPerSecond"])), str(self._settings.get_int(["CameraWidth"])), str(self._settings.get_int(["CameraHeight"]))])
+				
+				# otherwise
+				else :
+				
+					# Clear webcam process
+					self.webcamProcess = None
+					
+					# Clear host camera
+					self._settings.set_boolean(["HostCamera"], False)
+					
+					# Clear webcam stream
+					octoprint.settings.settings().set(["webcam", "stream"], "None", True)
+					
+					# Save settings
+					octoprint.settings.settings().save()
+					
+					# Send message
+					self._plugin_manager.send_plugin_message(self._identifier, dict(value = "Show Message", message = "Hosting camera failed", header = "Camera Host Status", confirm = True))
 	
 	# Load shared library
 	def loadSharedLibrary(self, isUsable = False) :
@@ -1519,6 +1556,11 @@ class M33FioPlugin(
 		# Unload shared library if it's loaded
 		self.unloadSharedLibrary()
 		
+		# Stop webcam process
+		if self.webcamProcess is not None :
+			self.webcamProcess.kill()
+			self.webcamProcess = None
+		
 		# Enable sleep
 		self.enableSleep()
 	
@@ -1838,6 +1880,10 @@ class M33FioPlugin(
 	
 		# Get old host camera settings
 		oldHostCamera = self._settings.get_boolean(["HostCamera"])
+		oldCameraPort = self._settings.get(["CameraPort"])
+		oldCameraWidth = self._settings.get_int(["CameraWidth"])
+		oldCameraHeight = self._settings.get_int(["CameraHeight"])
+		oldCameraFramesPerSecond = self._settings.get_int(["CameraFramesPerSecond"])
 		
 		# Get old not using a Micro 3D printer
 		oldNotUsingAMicro3DPrinter = self._settings.get_boolean(["NotUsingAMicro3DPrinter"])
@@ -1909,6 +1955,28 @@ class M33FioPlugin(
 			
 			# Save settings
 			octoprint.settings.settings().save()
+		
+		# Check if hosting camera
+		if self._settings.get_boolean(["HostCamera"]) :
+		
+			# Check if camera settings have changed
+			if self.webcamProcess is None or (oldCameraPort != self._settings.get(["CameraPort"]) or oldCameraWidth != self._settings.get_int(["CameraWidth"]) or oldCameraHeight != self._settings.get_int(["CameraHeight"]) or oldCameraFramesPerSecond != self._settings.get_int(["CameraFramesPerSecond"])) :
+		
+				# Stop webcam process
+				if self.webcamProcess is not None :
+					self.webcamProcess.kill()
+					self.webcamProcess = None
+			
+				# Start webcam process
+				self.startWebcamProcess()
+		
+		# Otherwise
+		else :
+		
+			# Stop webcam process
+			if self.webcamProcess is not None :
+				self.webcamProcess.kill()
+				self.webcamProcess = None
 		
 		# Update debug level
 		if self._settings.get_boolean(["UseDebugLogging"]) :
@@ -2738,6 +2806,9 @@ class M33FioPlugin(
 				# Temporarily disable slicer reminder
 				if value == "Slicer" :
 					self.slicerReminder = False
+					
+					# Set file locations
+					self.setFileLocations()
 				
 				# Temporarily disable sleep reminder
 				elif value == "Sleep" :
@@ -2752,10 +2823,16 @@ class M33FioPlugin(
 				# Permanently disable slicer reminder
 				if value == "Slicer" :
 					self._settings.set_boolean(["SlicerNeverRemind"], True)
+					
+					# Set file locations
+					self.setFileLocations()
 				
 				# Permanently disable sleep reminder
 				elif value == "Sleep" :
 					self._settings.set_boolean(["SleepNeverRemind"], True)
+				
+				# Save settings
+				octoprint.settings.settings().save()
 			
 			# Otherwise check if parameter is to view a profile
 			elif data["value"].startswith("View Profile:") :
@@ -5049,8 +5126,13 @@ class M33FioPlugin(
 			# Remove Micro 3D printer profile
 			if self._printer_profile_manager.exists("micro_3d") :
 				self._printer_profile_manager.remove("micro_3d")
+		
+		# Otherwise
 		else :
+		
+			# Save printer profile
 			self.savePrinterProfile()
+	
 	# Event monitor
 	def on_event(self, event, payload) :
 	
