@@ -56,7 +56,6 @@
 			<label class="checkbox" title="Hosts a camera's stream and snapshot at port 4999 at /stream.mjpg and /snapshot.jpg respectively">
 				<input type="checkbox" class="input-block-level" data-bind="checked: settings.plugins.m33fio.HostCamera"><span>Host Camera</span>
 				<select class="input-block-level short" data-bind="value: settings.plugins.m33fio.CameraPort"></select>
-				&nbsp;<span class="label label-important">Changes require restart</span>
 			</label>
 		</div>
 	</div>
@@ -250,7 +249,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="control-group micro3d" title="The vertical displacement for the bed's center. A positive vertical displacement means that the bed's center is higher than the actual bed's center, and a negative vertical displacement means that the bed's center is lower than the actual bed's center.">
+	<div class="control-group micro3d" title="The vertical displacement for the entire bed. A positive vertical displacement means that the entire bed is higher than it is, and a negative vertical displacement means that the entire bed is lower than it is.">
 		<label class="control-label">Bed Height Offset</label>
 		<div class="controls">
 			<div class="input-append">
